# sagemage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MERGE_SUMMARY.md  PACKAGE_SETUP.md  README.md  README_complete.md  changes.md  manual.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini  verify_package.py
.github/workflows/: publish.yml  tests.yml
docs/: Makefile  api.rst  architecture.md  conf.py  getting_started.rst  index.rst
sagemage/: __init__.py  api_client.py  core.py  dataset.py  utils.py  version.txt
sagemage/examples/: __init__.py
sagemage/examples/foofoo/: __init__.py
sagemage/examples/foofoo/inputs/: foofoo_input.csv  types.csv
sagemage/examples/foofoo/instructions/: analyze.txt  classify.txt  create.txt  foofoo.txt
sagemage/examples/foofoo/py/: foofoo.py
sagemage/examples/foofoo/settings/: about.txt  about_analyzer.txt  about_classifier.txt  foofoo.json
tests/: __init__.py  conftest.py  test_sagemage.py
