[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagemage"
version = "0.1.0"
description = "Systematic Agentic Modular Analytic Generative Engineering Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "openai>=1.0.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["sagemage", "agentic", "engineering", "framework", "modular", "generative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]
api = [
    "openai>=1.0.0",
]

[project.urls]
repository = "https://github.com/yourusername/sagemage"
documentation = "https://sagemage.readthedocs.io"
"Bug Tracker" = "https://github.com/yourusername/sagemage/issues"

[tool.setuptools]
packages = ["sagemage"]

[tool.setuptools.package-data]
sagemage = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sagemage --cov-report=html --cov-report=term-missing"
