[metadata]
name = sagemage
version = attr: sagemage.__version__

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
include = sagemage*

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.venv

[tool:pytest]
testpaths = tests
addopts = --strict-markers --tb=short
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
